Bug 160831 - Some contour lines appears in images
Summary: Some contour lines appears in images
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
24.2.1.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2024-04-26 11:29 UTC by paulo g.
Modified: 2024-04-29 14:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
original file (211.99 KB, application/vnd.oasis.opendocument.graphics)
2024-04-26 11:30 UTC, paulo g.
Details
pdf file with error (112.63 KB, application/pdf)
2024-04-26 11:30 UTC, paulo g.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description paulo g. 2024-04-26 11:29:26 UTC
Description:
I have cut several images and join them to create a new one.
When I export them to pdf some lines appears in pdf.

Steps to Reproduce:
1.export to pdf
2.
3.

Actual Results:
make lines

Expected Results:
the countour lines should not appear


Reproducible: Always


User Profile Reset: No

Additional Info:
thanks for your work
Comment 1 paulo g. 2024-04-26 11:30:06 UTC
Created attachment 193866 [details]
original file
Comment 2 paulo g. 2024-04-26 11:30:57 UTC
Created attachment 193867 [details]
pdf file with error
Comment 3 m_a_riosv 2024-04-26 22:36:55 UTC
Reproducible with:
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
and


Even the graphics have no line, in the export as PDF it looks like the line is applied, barely visible because it is applied very thinly and with a blue color.
Changing DPI for export doesn't help.

Not reproducible with:
Version: 7.6.6.3 (X86_64) / LibreOffice Community
Build ID: d97b2716a9a4a2ce1391dee1765565ea469b0ae7
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 4 raal 2024-04-28 14:54:16 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2.
Adding Cc: to Patrick Luby ; Could you possibly take a look at this one?
Thanks
 7383689f8634b5aa7292f0fdaca61134124931f5 is the first bad commit
commit 7383689f8634b5aa7292f0fdaca61134124931f5
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Mon Oct 23 18:33:50 2023 +0200

    source d8ec731e613d840dc7550a3468110a69fd5280e4

158355: tdf#157795 set color to black outside of of bitmap bounds | https://gerrit.libreoffice.org/c/core/+/158355
Comment 5 Patrick (volunteer) 2024-04-28 15:07:33 UTC
I can reproduce this in my local build on macOS in all three Skia settings: Skia/Metal, Skia/Raster, and Skia disabled. Let me see if I can rework the fix for tdf#157795 without causing this bug:

Version: 24.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 83236587bfca52513515b0b7a7dbfa18eed11503
CPU threads: 8; OS: macOS 14.4.1; UI render: Skia/Metal; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 6 Commit Notification 2024-04-28 21:06:05 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5425103fb5a09c7e5e56d077260523438c593e21

tdf#160831 only set outside color to black for alpha masks

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Patrick (volunteer) 2024-04-28 21:09:34 UTC
I have committed a fix this bug. The fix should be in tomorrow's (29 April 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation but before you launch /Applications/LibreOfficeDev:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 8 Commit Notification 2024-04-28 22:47:25 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/e1a5213427a876ae609635671f6fd6186aea1e67

tdf#160831 only set outside color to black for alpha masks

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-04-29 12:13:38 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-3":

https://git.libreoffice.org/core/commit/24bf5dd70e721fd68df0e2bd06adb85ebaf4ea24

tdf#160831 only set outside color to black for alpha masks

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.