tdf#160831 only set outside color to black for alpha masks

The outside color still needs to be white for the content
so only apply the fix for tdf#157795 to the alpha mask.

Change-Id: I7486b2c9062ca96bf127f2bce6b1bd5e65d00ff6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166806
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 5425103fb5a09c7e5e56d077260523438c593e21)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166728
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Patrick Luby <guibomacdev@gmail.com>